# MAI-OOP-LABS

./: CMakeLists.txt
Lab-1/: CMakeLists.txt
Lab-1/include/: main.h  utils.h
Lab-1/src/: main.cpp
Lab-1/src/program/: utils.cpp
Lab-1/tests/: tests.cpp
Lab-2/: CMakeLists.txt
Lab-2/include/classes/: binary.h
Lab-2/src/: main.cpp
Lab-2/src/classes/: binary.cpp
Lab-2/tests/: tests.cpp
Lab-3/: CMakeLists.txt
Lab-3/include/classes/: array.h  figure.h  rectangle.h  square.h  triangle.h
Lab-3/src/: main.cpp
Lab-3/src/classes/: array.cpp  figure.cpp  rectangle.cpp  square.cpp  triangle.cpp
Lab-3/tests/: tests.cpp
Lab-4/: CMakeLists.txt
Lab-4/include/classes/: array.h  exceptions.h  figure.h  point.h  rectangle.h  square.h  triangle.h
Lab-4/src/: main.cpp
Lab-4/tests/: array_tests.cpp  figure_tests.cpp
Lab-5/: CMakeLists.txt
Lab-5/include/: custom_memory_resources.h  linked_list.h
Lab-5/src/: main.cpp
Lab-5/tests/: tests.cpp
Lab-6/: CMakeLists.txt  main.cpp
Lab-6/include/: Editor.h  GameInstance.h  NPC.h  Observer.h  Visitor.h
Lab-6/src/: Editor.cpp  GameInstance.cpp  NPC.cpp  Observer.cpp  Visitor.cpp
Lab-6/tests/: tests.cpp
Lab-7/: CMakeLists.txt  main.cpp
Lab-7/include/: FightManager.h  GameInstance.h  NPC.h  Visitor.h
Lab-7/src/: GameInstance.cpp  NPC.cpp
Lab-7/tests/: tests.cpp
